--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         class="nav__cta type-label-lg"
                         href="https://docs.google.com/forms/d/e/1FAIpQLSfw84lbPtwU-U1VdQ5k_yFP7KHu9qwe87h3Kjq9cYF2FodK2g/viewform?usp=publish-editor"
                         target="_blank"
-                        >Submit Record</a
+                        >Submit Level/Record</a
                     >
                 </div>
             </nav>
